<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:arb="http://schemas.android.com/apk/res-auto"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/radio_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/relative_radio"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:padding="10dp"
        android:paddingRight="150dp">


        <TextView
            android:id="@+id/tvRadioChannelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/odessamama"
            android:textColor="@color/shanson"
            android:textSize="18sp"
            tools:ignore="MissingPrefix" />

        <ImageButton
            android:id="@+id/imageButtonStart"
            android:layout_width="100dp"
            android:layout_height="72dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btnAlarm"
            android:background="#000000"
            android:src="@drawable/ic_start_radio"
            android:textOff=""
            android:textOn="" />

        <ImageButton
            android:id="@+id/btnAlarm"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/ic_alarm"
            android:contentDescription="Alarm"
            android:tint="@color/shanson" />

        <ImageButton
            android:id="@+id/btnInfo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignEnd="@+id/btnAlarm"
            android:layout_alignParentBottom="true"
            android:background="@drawable/info"
            android:contentDescription="Alarm"
            android:tint="@color/shanson" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="0dp">

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/radio_segmented_group1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:clipChildren="false"
            android:elevation="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            arb:sc_tint_color="@color/shanson2"
            segmentedgroup:sc_border_width="1dp"
            segmentedgroup:sc_checked_text_color="@color/radio_button_selected_color"
            segmentedgroup:sc_corner_radius="5dp">


            <RadioButton
                android:id="@+id/btnShanson"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="90dp"
                android:duplicateParentState="false"
                android:minHeight="32dp"
                android:state_pressed="true"
                android:text="@string/chanson1"
                android:textIsSelectable="false" />

            <RadioButton
                android:id="@+id/btn24"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="90dp"
                android:minHeight="32dp"
                android:state_pressed="true"
                android:text="@string/chanson24" />

            <RadioButton
                android:id="@+id/btnPortal"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="90dp"
                android:minHeight="32dp"
                android:state_pressed="true"
                android:text="@string/portal" />


            <RadioButton
                android:id="@+id/btnLyric"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="90dp"
                android:minHeight="32dp"
                android:state_pressed="true"
                android:text="@string/lirika" />


        </info.hoang8f.android.segmented.SegmentedGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="0dp">

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/radio_segmented_group2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:clickable="false"
            android:clipChildren="false"
            android:elevation="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            arb:sc_tint_color="@color/shanson2"
            segmentedgroup:sc_border_width="1dp"
            segmentedgroup:sc_checked_text_color="@color/radio_button_selected_color"
            segmentedgroup:sc_corner_radius="5dp">


            <RadioButton
                android:id="@+id/btnSoul"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="90dp"
                android:duplicateParentState="false"
                android:minHeight="32dp"
                android:state_pressed="true"
                android:text="@string/dusha"
                android:textIsSelectable="false" />

            <RadioButton
                android:id="@+id/btnMama"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="90dp"
                android:minHeight="32dp"
                android:state_pressed="true"
                android:text="@string/chanson2" />

            <RadioButton
                android:id="@+id/btnBards"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="90dp"
                android:minHeight="32dp"
                android:state_pressed="true"
                android:text="@string/bardy" />


            <RadioButton
                android:id="@+id/btnRozenbaum"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="90dp"
                android:minHeight="32dp"
                android:state_pressed="true"
                android:text="@string/rosenbaum"
                android:textSize="12sp" />


        </info.hoang8f.android.segmented.SegmentedGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:minHeight="0dp">

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/radio_segmented_group3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:clickable="false"
            android:clipChildren="false"
            android:elevation="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            arb:sc_tint_color="@color/shanson2"
            segmentedgroup:sc_border_width="1dp"
            segmentedgroup:sc_checked_text_color="@color/radio_button_selected_color"
            segmentedgroup:sc_corner_radius="5dp">


            <RadioButton
                android:id="@+id/btnVysotsky"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="90dp"
                android:duplicateParentState="false"
                android:minHeight="32dp"
                android:state_pressed="true"
                android:text="@string/vysotsky"
                android:textIsSelectable="false" />

            <RadioButton
                android:id="@+id/btnMichailov"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="90dp"
                android:minHeight="32dp"
                android:state_pressed="true"
                android:text="@string/mihailov" />

            <RadioButton
                android:id="@+id/btnKrug"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="90dp"
                android:minHeight="32dp"
                android:state_pressed="true"
                android:text="@string/krug" />


            <RadioButton
                android:id="@+id/btnLeps"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="90dp"
                android:minHeight="32dp"
                android:state_pressed="true"
                android:text="@string/leps" />


        </info.hoang8f.android.segmented.SegmentedGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/seek_layout"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxHeight="2dp"
            android:progress="50"
            android:progressDrawable="@color/shanson"
            android:scrollbars="none"
            android:thumbTint="@color/shanson" />
    </LinearLayout>

</LinearLayout>