<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"

    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:gravity="top|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal|top"
            android:text="@string/best_shanson"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/shanson"
            android:textSize="18sp"
            android:textStyle=""
            android:visibility="visible"
            tools:text="@string/best_shanson" />

        <ImageView
            android:id="@+id/image_shanson_info"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/shanson"
            android:gravity="center_horizontal|top"
            android:scaleType="centerInside"
            android:src="@drawable/shanson2"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textTimerDreamInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/copyright_2018_amaxim_apps_4_1_0"
            android:textColor="@color/shanson"
            android:textSize="14sp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_info2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:gravity="top|center"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/image_support"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:contentDescription="@string/support"
            android:gravity="center_horizontal|top"
            android:scaleType="fitCenter"
            android:background="@drawable/support"
            android:layout_marginBottom="5dp"
            android:visibility="visible" />



        <ImageButton
            android:id="@+id/image_amaxim"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:contentDescription="@string/support"
            android:gravity="center_horizontal|top"
            android:scaleType="fitCenter"
            android:background="@drawable/amaximapps"
            android:layout_marginBottom="5dp"
            android:visibility="visible" />


        <ImageButton
            android:id="@+id/image_email"
            android:layout_width="150dp"
            android:layout_height="35dp"

            android:contentDescription="@string/support"
            android:gravity="center_horizontal|top"
            android:scaleType="fitCenter"
            android:background="@drawable/sms"
            android:layout_marginBottom="5dp"
            android:visibility="visible" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_info3"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/image_facebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/facebook"
            android:contentDescription="facebook"
            android:gravity="left|bottom"
            android:scaleType="fitCenter"
            android:visibility="visible" />


        <ImageButton
            android:id="@+id/image_twitter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/twitter"
            android:contentDescription="@string/twitter"
            android:gravity="right|bottom"
            android:scaleType="fitCenter"
            android:visibility="visible" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:text="@string/hi_fi"
            android:textColor="@color/shanson"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>